--- a/pages/fancy-robot.html
+++ b/pages/fancy-robot.html
@@ -25,6 +25,7 @@
         <div class="robot-eye-left"></div>
         <div class="robot-eye-right"></div>
         <div class="robot-nose"></div>
+        <div class="robot-mouth"></div>
         <div class="robot-teeth">
           <div class="robot-tooth"></div>
           <div class="robot-tooth"></div>
@@ -46,8 +47,8 @@
         <div class="robot-hair-one"></div>
         <div class="robot-hair-two"></div>
         <div class="robot-hair-three"></div>
-        <div class="robot-hair-two"></div>
         <div class="robot-hair-one"></div>
+        <div class="robot-hair-two"></div>
       </div>
     </div>
   </body>
